--- a/index.html
+++ b/index.html
@@ -30,6 +30,101 @@
     <div class="main-banner">
         <img src="images/banner.jpg" alt="banner">
     </div>
+    <main class="wrapper">
+        <section id="service">
+            <h2>services</h2>
+            <ul>
+                <li>
+                    <img src="images/cs-1.png" alt="Pellentesque">
+                    <h3>Pellentesque</h3>
+                    <p>Nulla vitae libero, a pharetra augue. Integer posuere erat a ante venenatis condimentum velit dapibus.</p>
+                </li>
+                <li>
+                    <img src="images/cs-2.png" alt="Consectetur">
+                    <h3>Consectetur</h3>
+                    <p>Vestibulum id ligula porta euismod semper. Aenean lacinia bibendum nulla sed consectetur dui.</p>
+                </li>
+                <li>
+                    <img src="images/cs-3.png" alt="Tristiquet">
+                    <h3>Tristiquet</h3>
+                    <p>Fusce dapibus, cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo risus.</p>
+                </li>
+                <li>
+                    <img src="images/cs-4.png" alt="Fermentum">
+                    <h3>Fermentum</h3>
+                    <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum sagittis lacus mollis.</p>
+                </li>
+            </ul>
+        </section>
+        <section id="latest-work">
+            <h2>Our Latest Works</h2>
+            <ul>
+                <li>
+                    <img src="images/snap-1.png" alt="work">
+                    <h3>Nobis Business Card</h3>
+                    <p class="tags">Business Card, Graphic</p>
+                    <p>Sed posuere consectetur est at lobortis. Porta sagittis lacus vel augue laoreet rutrum.</p>
+                </li>
+                <li>
+                    <img src="images/snap-2.png" alt="work">
+                    <h3>New Fun Project</h3>
+                    <p class="tags">Web Design, Application</p>
+                    <p>Nulla vitae elit libero, a pharetra augue. Donec sed odio dui. Vestibulum id ligula porta felis.</p>
+                </li>
+                <li>
+                    <img src="images/snap-3.png" alt="work">
+                    <h3>Passionaries Branding Cover</h3>
+                    <p class="tags">Branding, Graphic Design</p>
+                    <p>Curabitur blandit tempus porttitor. Donec id elit non mi porta gravida at eget metus.</p>
+                </li>
+            </ul>
+        </section>
+    </main>
+    <div id="quote">
+        <blockquote>Cras mattis consectetur purus sit amet fermentum. Donec id elit non mi porta gravida at eget metus. Duis mollis, est non commodo luctus erat porttitor.</blockquote>
+    </div>
+    <footer>
+        <div class="wrapper">
+            <h2>Footer</h2>
+            <ul>
+                <li>
+                    <h4>Get In Touch</h4>
+                </li>
+                <li>Fusce dapibus, tellus commodo, tortor mauris condimentum utellus fermentum, porta sem malesuada magna.</li>
+                <li>Moonshine Street No: 14/05
+                    Light City, Jupiter</li>
+                <li>0247 541 65 87</li>
+                <li>support@longwave.com
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <h4>Twitter</h4>
+                </li>
+                <li>Aenean lacinia bibendum nulla sed leo posuere erat a ante venenatis dapibus posuere velit aliquet.</li>
+                <li>Donec ullamcorper metus auctor fringilla. Nullam quis risus eget.</li>
+                <li>Vestibulum id ligula porta euismod semper. Maecenas faucibus mollis.</li>
+            </ul>
+            <ul>
+                <li>
+                    <h4>Popular Posts</h4>
+                </li>
+                <li>Vivamus sagittis lacus vel augue laoreet rutrum dolor auctor.<br />14 Nov, 2012</li>
+                <li>Scelerisque nisl consectetur et.<br />22 May, 2012 </li>
+                <li>Pellentesque ornare sem lacinia quam venenatis vestibulum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.<br />15 July, 2012</li>
+            </ul>
+            <ul>
+                <li>
+                    <h4>About Us</h4>
+                </li>
+                <li>Vestibulum id ligula porta felis euismod semper. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</li>
+                <li>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus curabitur blandit tempus.</li>
+            </ul>
+        </div>
+        <div class="license">
+            &copy; 2018 Marble. All rights reserved. Theme by elemis.
+        </div>
+    </footer>
 </body>
 
 </html>
