style header and banner

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="wrapper">
-            <h2 class="logo">Marble</h2>
+            <h1 class="logo">Marble</h1>
             <nav>
                 <h2>Main Navigation</h2>
                 <div class="burger-nav"></div>
@@ -27,7 +27,7 @@
             </nav>
         </div>
     </header>
-    <div class="main-banner">
+    <div id="main-banner">
         <img src="images/banner.jpg" alt="banner">
     </div>
     <main class="wrapper">
