--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
                 <li>
                     <img src="images/cs-1.png" alt="Pellentesque">
                     <h3>Pellentesque</h3>
-                    <p>Nulla vitae libero, a pharetra augue. Integer posuere erat a ante venenatis condimentum velit dapibus.</p>
+                    <p>Nulla vitae libero, a pharetra augue. Integer posuere erat a ante venenatis condimentum velit
+                        dapibus.</p>
                 </li>
                 <li>
                     <img src="images/cs-2.png" alt="Consectetur">
@@ -52,7 +53,8 @@
                 <li>
                     <img src="images/cs-4.png" alt="Fermentum">
                     <h3>Fermentum</h3>
-                    <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum sagittis lacus mollis.</p>
+                    <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum sagittis lacus
+                        mollis.</p>
                 </li>
             </ul>
         </section>
@@ -81,7 +83,8 @@
         </section>
     </main>
     <div id="quote">
-        <blockquote>Cras mattis consectetur purus sit amet fermentum. Donec id elit non mi porta gravida at eget metus. Duis mollis, est non commodo luctus erat porttitor.</blockquote>
+        <blockquote>Cras mattis consectetur purus sit amet fermentum. Donec id elit non mi porta gravida at eget metus.
+            Duis mollis, est non commodo luctus erat porttitor.</blockquote>
     </div>
     <footer>
         <div class="wrapper">
@@ -90,7 +93,8 @@
                 <li>
                     <h4>Get In Touch</h4>
                 </li>
-                <li>Fusce dapibus, tellus commodo, tortor mauris condimentum utellus fermentum, porta sem malesuada magna.</li>
+                <li>Fusce dapibus, tellus commodo, tortor mauris condimentum utellus fermentum, porta sem malesuada
+                    magna.</li>
                 <li>Moonshine Street No: 14/05
                     Light City, Jupiter</li>
                 <li>0247 541 65 87</li>
@@ -101,9 +105,10 @@
                 <li>
                     <h4>Twitter</h4>
                 </li>
-                <li>Aenean lacinia bibendum nulla sed leo posuere erat a ante venenatis dapibus posuere velit aliquet.</li>
-                <li>Donec ullamcorper metus auctor fringilla. Nullam quis risus eget.</li>
-                <li>Vestibulum id ligula porta euismod semper. Maecenas faucibus mollis.</li>
+                <li class="tweet">Aenean lacinia bibendum nulla sed leo posuere erat a ante venenatis dapibus posuere
+                    velit aliquet.</li>
+                <li class="tweet">Donec ullamcorper metus auctor fringilla. Nullam quis risus eget.</li>
+                <li class="tweet">Vestibulum id ligula porta euismod semper. Maecenas faucibus mollis.</li>
             </ul>
             <ul>
                 <li>
@@ -111,18 +116,21 @@
                 </li>
                 <li>Vivamus sagittis lacus vel augue laoreet rutrum dolor auctor.<br />14 Nov, 2012</li>
                 <li>Scelerisque nisl consectetur et.<br />22 May, 2012 </li>
-                <li>Pellentesque ornare sem lacinia quam venenatis vestibulum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.<br />15 July, 2012</li>
+                <li>Pellentesque ornare sem lacinia quam venenatis vestibulum. Fusce dapibus, tellus ac cursus commodo,
+                    tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.<br />15 July, 2012</li>
             </ul>
             <ul>
                 <li>
                     <h4>About Us</h4>
                 </li>
-                <li>Vestibulum id ligula porta felis euismod semper. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</li>
-                <li>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus curabitur blandit tempus.</li>
+                <li>Vestibulum id ligula porta felis euismod semper. Duis mollis, est non commodo luctus, nisi erat
+                    porttitor ligula, eget lacinia odio sem nec elit.</li>
+                <li>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus curabitur
+                    blandit tempus.</li>
             </ul>
-        </div>
-        <div class="license">
-            &copy; 2018 Marble. All rights reserved. Theme by elemis.
+            <div id="copyright">
+                &copy; 2018 Marble. All rights reserved. Theme by elemis.
+            </div>
         </div>
     </footer>
 </body>
