making a mobile menu

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width;scaling=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Document</title>
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
@@ -15,8 +15,8 @@
             <h1 class="logo">Marble</h1>
             <nav>
                 <h2>Main Navigation</h2>
-                <div class="burger-nav"></div>
-                <ul>
+                <div id="burger-nav"></div>
+                <ul id="navigation">
                     <li><a href="" class="current">Home</a></li>
                     <li><a href="">About</a></li>
                     <li><a href="">Journal</a></li>
@@ -133,6 +133,8 @@
             </div>
         </div>
     </footer>
+
+    <script src="menu.js"></script>
 </body>
 
 </html>
