--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
         </div>
     </header>
     <div id="main-banner">
-        <img src="images/banner.jpg" alt="banner">
+        <picture>
+            <source srcset="images/banner-s.jpg" media="(max-width: 480px)">
+            <source srcset="images/banner-m.jpg" media="(max-width: 768px)">
+            <img src="images/banner.jpg" alt="banner">
+        </picture>
     </div>
     <main class="wrapper">
         <section id="service">
